@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-25T01:04:24Z",
+  "timestamp" : "2022-07-25T08:16:57Z",
   "count_outdated" : 414,
   "uniques_outdated" : 224,
   "count" : 435,
-  "uniques" : 235,
+  "uniques" : 236,
   "clones" : [
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -72,6 +72,13 @@
       "timestamp": "2022-07-24T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
